@startuml
' Domænemodel for frisørbooking-platform (SP4)

class Customer
class Barber
class Category
class Service
class Booking
class Review
class OpeningHours

' === Relationer ===
Customer -- Booking : opretter >
Barber -- Booking : modtager >

Barber *-- Service : tilbyder >
Barber *-- OpeningHours : har >

Service -- Category : tilhører >

Booking -- Service : består af >
Booking -- Review : får >

@enduml